--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.example.lpc.snowmusic"
+        applicationId "com.lpc.snowmusic"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
