--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.lpc.snowmusic">
+          package="com.lpc.snowmusic">
 
     <application
-            android:name=".application.MusicApplication"
+            android:name="com.lpc.snowmusic.application.MusicApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -12,7 +12,7 @@
             android:theme="@style/AppTheme">
 
 
-        <activity android:name=".ui.MainActivity">
+        <activity android:name="com.lpc.snowmusic.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <action android:name="android.intent.action.MAIN"/>
