--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="com.lpc.snowmusic">
 
     <application
-            android:name="com.lpc.snowmusic.application.MusicApplication"
+            android:name=".application.MusicApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -11,22 +11,25 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
-
-        <activity android:name="com.lpc.snowmusic.ui.MainActivity">
+        <activity android:name=".ui.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <!--适配方案-->
+        <!-- 适配方案 -->
         <meta-data
                 android:name="design_width_in_dp"
                 android:value="360"/>
         <meta-data
                 android:name="design_height_in_dp"
                 android:value="640"/>
+
+        <!--主Activity -->
+        <activity android:name=".ui.activity.MainActivity"/>
+
     </application>
 
 </manifest>
