--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.example.lpc.snowmusic"
+        applicationId "com.lpc.snowmusic"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
@@ -39,7 +39,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 
-
     //(今日头条屏幕适配方案终极版，一个极低成本的 Android 屏幕适配方案
     implementation 'me.jessyan:autosize:1.2.1'
     //一个支持多种状态的自定义View,可以方便的切换到：加载中视图、错误视图、空数据视图、网络异常视图、内容视图。
@@ -58,6 +57,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'
     //工具类
     implementation 'com.blankj:utilcodex:1.28.0'
+    //
+    implementation 'com.google.android.material:material:1.0.0-rc01'
 
 
 
