--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.lpc.snowmusic">
+          package="com.lpc.snowmusic">
 
     <application
             android:name=".application.MusicApplication"
@@ -11,22 +11,25 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
-
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <!--适配方案-->
+        <!-- 适配方案 -->
         <meta-data
                 android:name="design_width_in_dp"
                 android:value="360"/>
         <meta-data
                 android:name="design_height_in_dp"
                 android:value="640"/>
+
+        <!--主Activity -->
+        <activity android:name=".ui.activity.MainActivity"/>
+
     </application>
 
 </manifest>
