--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-       <!-- 适配方案 -->
+        <!-- 适配方案 -->
         <meta-data
                 android:name="design_width_in_dp"
                 android:value="360"/>
@@ -28,7 +28,7 @@
                 android:name="design_height_in_dp"
                 android:value="640"/>
 
-
+        <!--主页面-->
         <activity android:name=".ui.activity.MainActivity"/>
 
     </application>
