--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,7 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'
     //EventBus
     implementation 'org.greenrobot:eventbus:3.2.0'
+    //Banner 轮播图
+    implementation 'com.youth.banner:banner:2.1.0'
 
 }
