--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'
     //
     implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+    //
+    implementation 'org.conscrypt:conscrypt-android:2.2.1'
     //工具类
     implementation 'com.blankj:utilcodex:1.28.0'
     //Design包
@@ -64,5 +66,11 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
     //Banner 轮播图
     implementation 'com.youth.banner:banner:2.1.0'
+    //
+    implementation 'androidx.multidex:multidex:2.0.0'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 
 }
