--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-
+    //圆形图片控件
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //圆角图片控件
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
 }
