--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'
     //
     implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
-    //
+    //OkHttp-conscrypt
     implementation 'org.conscrypt:conscrypt-android:2.2.1'
     //工具类
     implementation 'com.blankj:utilcodex:1.28.0'
@@ -66,7 +66,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
     //Banner 轮播图
     implementation 'com.youth.banner:banner:2.1.0'
-    //
+    //Dex
     implementation 'androidx.multidex:multidex:2.0.0'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -75,5 +75,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //圆角图片控件
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    //加载动画
+    implementation 'com.wang.avi:library:2.1.3'
 
 }
