--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.activity.SplashActivity">
+        <activity android:name="com.lpc.snowmusic.ui.main.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -49,7 +49,7 @@
         </service>
 
         <!--主页面-->
-        <activity android:name=".ui.activity.MainActivity"/>
+        <activity android:name="com.lpc.snowmusic.ui.main.activity.MainActivity"/>
 
     </application>
 
