--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.lpc.snowmusic">
-
     <!-- 获取GSM网络信息状态，如当前的网络连接是否有效 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <!-- 允许访问Wi-Fi网络状态信息 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <!-- 允许获取Wi-Fi网络状态改变信息 -->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <!-- 访问网络 -->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <!-- 读取手机状态 -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <!-- SD 卡读写权限 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> <!-- 允许访问Wi-Fi网络状态信息 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> <!-- 允许获取Wi-Fi网络状态改变信息 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/> <!-- 访问网络 -->
+    <uses-permission android:name="android.permission.INTERNET"/> <!-- 读取手机状态 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/> <!-- SD 卡读写权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
@@ -25,32 +19,31 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
-        <activity android:name="com.lpc.snowmusic.ui.main.activity.SplashActivity">
+        <activity android:name=".ui.main.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <action android:name="android.intent.action.VIEW"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <!-- 适配方案 -->
+        </activity> <!-- 适配方案 -->
         <meta-data
                 android:name="design_width_in_dp"
                 android:value="360"/>
         <meta-data
                 android:name="design_height_in_dp"
-                android:value="640"/>
-
-        <!-- 音乐播放服务 -->
-        <service android:name=".player.MusicPlayerService"
-                 android:enabled="true"
-                 android:exported="true">
+                android:value="640"/> <!-- 音乐播放服务 -->
+        <service
+                android:name=".player.MusicPlayerService"
+                android:enabled="true"
+                android:exported="true">
         </service>
 
-        <!--主页面-->
-        <activity android:name="com.lpc.snowmusic.ui.main.activity.MainActivity"/>
 
+        <!-- 主页面 -->
+        <activity android:name=".ui.main.activity.MainActivity"/>
+        <!--歌手详情-->
+        <activity android:name=".ui.discover.activity.ArtistDetailActivity"/>
     </application>
 
 </manifest>
