--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,7 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.3.0'
     //加载动画
     implementation 'com.wang.avi:library:2.1.3'
+    //沉浸式状态栏
+    implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
 
 }
