--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,24 @@
                 android:value="360"/>
         <meta-data
                 android:name="design_height_in_dp"
-                android:value="640"/> <!-- 音乐播放服务 -->
+                android:value="640"/>
+
+        <!--适配全面屏-->
+        <meta-data
+                android:name="android.max_aspect"
+                android:value="2.4"/>
+
+        <!--适配华为（huawei）刘海屏-->
+        <meta-data
+                android:name="android.notch_support"
+                android:value="true"/>
+        <!--适配小米（xiaomi）刘海屏-->
+        <meta-data
+                android:name="notch.config"
+                android:value="portrait|landscape"/>
+
+
+        <!-- 音乐播放服务 -->
         <service
                 android:name=".player.MusicPlayerService"
                 android:enabled="true"
