--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,7 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     //沉浸式状态栏
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
+    //Android音乐接口Api
+    implementation 'com.github.caiyonglong:musicapi:1.0.4'
 
 }
