--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.lpc.snowmusic">
     <!-- 获取GSM网络信息状态，如当前的网络连接是否有效 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <!-- 允许访问Wi-Fi网络状态信息 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <!-- 允许获取Wi-Fi网络状态改变信息 -->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <!-- 访问网络 -->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <!-- 读取手机状态 -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <!-- SD 卡读写权限 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> <!-- 允许访问Wi-Fi网络状态信息 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> <!-- 允许获取Wi-Fi网络状态改变信息 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/> <!-- 访问网络 -->
+    <uses-permission android:name="android.permission.INTERNET"/> <!-- 读取手机状态 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/> <!-- SD 卡读写权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
@@ -42,13 +37,12 @@
         <meta-data
                 android:name="notch.config"
                 android:value="portrait|landscape"/>
-        <!--TBS内核首次加载时优化Service-->
+        <!-- TBS内核首次加载时优化Service -->
         <service
                 android:name="com.tencent.smtt.export.external.DexClassLoaderProviderService"
                 android:label="dexopt"
                 android:process=":dexopt">
         </service>
-
         <!-- 音乐播放服务 -->
         <service
                 android:name=".player.MusicPlayerService"
@@ -56,6 +50,7 @@
                 android:exported="true">
         </service>
 
+        <!-- 启动页 -->
         <activity android:name=".ui.main.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -70,9 +65,11 @@
         <activity
                 android:name=".ui.discover.activity.ArtistDetailActivity"
                 android:theme="@style/TranslucentTheme"/>
-
-        <!--通用WebView页面-->
+        <!-- 通用WebView页面 -->
         <activity android:name=".ui.discover.activity.CommonWebViewActivity"/>
+        <!--歌单详情-->
+        <activity android:name=".ui.discover.activity.SongListDetailActivity"
+                  android:theme="@style/TranslucentTheme"/>
 
     </application>
 
