--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.0'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     //圆形图片控件
     implementation 'de.hdodenhof:circleimageview:3.1.0'
