--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,8 @@
         </service>
 
         <!-- 启动页 -->
-        <activity android:name=".ui.main.activity.SplashActivity">
+        <activity android:name=".ui.main.activity.SplashActivity"
+                  android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW"/>
