--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,6 @@ dependencies {
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
     //Android音乐接口Api
     implementation 'com.github.caiyonglong:musicapi:1.0.4'
+    //字体图标
+    implementation 'net.steamcrafted:materialiconlib:1.0.9'
 }
