--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
+            android:networkSecurityConfig="@xml/network_security_config"
             android:theme="@style/AppTheme">
         <!-- 适配方案 -->
         <meta-data
@@ -73,6 +74,8 @@
                 android:theme="@style/TranslucentTheme"/>
         <!-- 歌单广场 -->
         <activity android:name=".ui.discover.activity.SongListSquareActivity"/>
+        <!-- 音乐播放页面 -->
+        <activity android:name=".ui.discover.PlayerActivity"/>
     </application>
 
 </manifest>
