--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,7 @@ dependencies {
     implementation 'com.github.caiyonglong:musicapi:1.0.4'
     //字体图标
     implementation 'net.steamcrafted:materialiconlib:1.0.9'
+    //Kotlin 协程
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
 }
