--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,7 @@ dependencies {
     //Kotlin 协程
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
+    //MMKV-基于 mmap 内存映射的 key-value 组件
+    implementation 'com.tencent:mmkv-static:1.2.8'
+
 }
