--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,5 +92,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     //MMKV-基于 mmap 内存映射的 key-value 组件
     implementation 'com.tencent:mmkv-static:1.2.8'
+    //BasePopup
+    implementation 'io.github.razerdp:BasePopup:2.3.0'
 
 }
