--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,5 +94,8 @@ dependencies {
     implementation 'com.tencent:mmkv-static:1.2.8'
     //BasePopup
     implementation 'io.github.razerdp:BasePopup:2.3.0'
+    //Material Dialog
+    implementation 'com.afollestad.material-dialogs:lifecycle:3.3.0'
+
 
 }
