--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,7 @@ dependencies {
     //
     def anko_version = "0.10.8"
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
+    //圆形进度条
+    implementation 'com.king.view:circleprogressview:1.1.2'
+
 }
