自定义通知栏的样式

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,9 @@
         <!-- 歌单广场 -->
         <activity android:name=".ui.discover.activity.SongListSquareActivity"/>
         <!-- 音乐播放页面 -->
-        <activity android:name=".ui.discover.PlayerActivity"/>
+        <activity
+                android:name=".ui.discover.PlayerActivity"
+                android:launchMode="singleTask" />
         <!-- 播放历史 -->
         <activity android:name=".ui.my.activity.PlayHistoryActivity"/>
         <!-- 本地音乐 -->
