Android 9.0 之后需要在清单文件中声明前台服务权限

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/><!--唤醒锁-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /><!--前台服务权限-->
     <application
             android:name=".application.MusicApplication"
             android:allowBackup="true"
