--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/><!--唤醒锁-->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /><!--前台服务权限-->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <application
             android:name=".application.MusicApplication"
             android:allowBackup="true"
